wip: fix filter by module

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+# url or file
 PEG_OAS=source/source.yaml
-PEG_MODULE=
+# use 'model' or 'api_operation_map'
 PEG_OP=model
+# set module to apply filter by it
+PEG_MODULE=
 # default ./output
 PEG_OUTPUT=./output
